--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
 \#*\#
-*.aux
-*.bbl
-*.blg
-*.log
-*.pdf
-*.fdb_latexmk
-*.fls
+/docs/*.pdf
+/latex/**/*.aux
+/latex/**/*.bbl
+/latex/**/*.blg
+/latex/**/*.fdb_latexmk
+/latex/**/*.fls
+/latex/**/*.log
+/latex/**/*.pdf
+/python/build/
+/python/dist/
+/python/norce.egg-info/
 /vesa_case_dir/REFHT.IN
 /python/norce/__pycache__/*
