--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /latex/**/*.fls
 /latex/**/*.log
 /latex/**/*.pdf
+/python/input_params.json
 /python/build/
 /python/dist/
 /python/norce.egg-info/
