Fixed bug in .gitignore
The ignore rule /latex/**/*.pdf introduced in commit cbb5563 was too
general and also ignored pdf figures in the latex/fig directory.

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,10 @@
 /latex/**/*.fdb_latexmk
 /latex/**/*.fls
 /latex/**/*.log
-/latex/**/*.pdf
+/latex/cholesky/cholesky.pdf
+/latex/main/main.pdf
+/latex/setup/setup.pdf
+/latex/variogram/setup.pdf
 /python/input_params.json
 /python/build/
 /python/dist/
